<resources>
    <string name="app_name">Guuber</string>
    <string name="welcome_to_guuber">Welcome to Guuber</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_up_text">Sign Up</string>

    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="retype_password_label">RePassword</string>
    <string name="user_type_label">User Type</string>

    <string-array name="user_type">
        <item><string name="type_driver">Driver</string></item>
        <item><string name="type_passenger">Passenger</string></item>
    </string-array>

    <string name="gender_type">Gender</string>

    <string-array name="gender_type">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="email_label">Email</string>
    <string name="car_id_label">Car-ID</string>

    <string name="submit_label">Submit</string>

    <string-array name="user_profile_page">
        <item>Guuber</item>
        <item>UserProfile</item>
        <item>Transactions</item>
        <item>Log out</item>
    </string-array>

    <string name="find_passenger_label">Find Passenger</string>
    <string name="find_driver_label">Find Driver</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_choose_signup_signin">ChooseSignupSignin</string>
    <string name="title_activity_signup">Signup</string>

    <string name="title_activity_signin">Signin</string>
    <string name="title_activity_driverend">End Service</string>
    <string name="title_activity_driverstart">Start Service</string>
    <string name="title_activity_driverupdate">Update Profile</string>
    <string name="title_activity_driverview">View Transaction History</string>
    <string name="title_activity_findpassenger">Find Passenger</string>

    <string name="title_activity_passengerend">End Service</string>
    <string name="title_activity_passengerstart">Start Service</string>
    <string name="title_activity_passengerupdate">Update Profile</string>
    <string name="title_activity_transactionview">View Transaction History</string>
    <string name="title_activity_finddriver">Find Driver</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_find_passenger">FindPassengerActivity</string>
    <string name="title_activity_find_driver">FindDriverActivity</string>
    <string name="title_activity_common_welcome">CommonWelcomeActivity</string>
    <string name="title_activity_common_sign_in_sign_up">CommonSignInSignUpActivity</string>
    <string name="title_activity_common_sign_up">CommonSignUpActivity</string>
    <string name="input_username_hint">input your username here</string>
    <string name="title_activity_find">Gubber</string>
    <string name="title_activity_common_sign_in">CommonSignInActivity</string>
    <string name="passenger">Passenger</string>
    <string name="passengername">Passenger Name</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="cost">Cost</string>
    <string name="startlocation">Start Location</string>
    <string name="endlocation">End Location</string>
    <string name="returnbutton">Return</string>
    <string name="inservice">In Service</string>
    <string name="endservice">End Service</string>
    <string name="findpassenger">Find Passenger</string>
    <string name="messageinput">Message Input</string>
    <string name="send">Send</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="carid">Car-ID</string>
    <string name="input_and_update">Input new and click SAVE to update</string>
    <string name="userame">User Name</string>
    <string name="driver">Driver</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="detail_reminder"> Click to view details</string>
    <string name="driver_name">driver name</string>
    <string name="finddriver">Find Driver</string>
    <string name="destination">Destination</string>
    <string name="zoomin">Zoom In</string>
    <string name="zoomout">Zoom Out</string>

</resources>
